@@ -1,3 +1,11 @@
+2009-06-24  Miguel de Dios  <miguel.dedios@artica.es>
+
+	* operation/agentes/estado_monitores.php: add organization list of monitors, add
+	row in table with title the monitor group.
+	* include/styles/pandora.css: add new class for cell used monitor group title
+	in the list of monitors in estado_monitores.php
+	Fixes: #2805001
+
 2009-06-24  Jorge Gonzalez  <jorgegonz@artica.es>
 
         * include/functions_reporting.php, include/functions_ui.php,
@@ -20,8 +28,8 @@
         * translation.
 
         * include/languages/index.pot: Updated po template.
-
-2009-06-24  Miguel de Dios  <miguel.dedios@artica.es>
+	
+2009-06-24  Miguel de Dios <miguel.dedios@artica.es>
 
 	* pandora_console/godmode/groups/group_list.php: fix group without image
 	don't print image tag. 
